syntax = "proto3";

package backends;

option go_package = "github.com/kong/blixt/internal/dataplane/client";

message Vip {
    uint32 ip = 1;
    uint32 port = 2;
}

message Target {
    uint32 daddr = 1;
    uint32 dport = 2;
    optional uint32 ifindex = 3;
}

message Targets {
    Vip vip = 1;
    repeated Target targets = 2;
}

message Confirmation {
    string confirmation = 1;
}

message PodIP {
    uint32 ip = 1;
}

message InterfaceIndexConfirmation {
    uint32 ifindex = 1;
}

service backends {
    rpc GetInterfaceIndex(PodIP) returns (InterfaceIndexConfirmation);
    rpc Update(Targets) returns (Confirmation);
    rpc Delete(Vip) returns (Confirmation);
}
